tweaking Zoom alignments
got heroPic and Stats better aligned:
 - tweaked heroSpace grid sizes
 - removed <br>s in HTML for stats
 - adjusted stat px sizes
 - heroPic alignment "fake"-centered

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <title>Geo Bio</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/x-icon" href="images/placeholder-logo.jpg" alt="Geo's Portrait">
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NHR175F5G0"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-NHR175F5G0');
+        </script>
     </head>
     <body id="bodyDisplay">
         <!--HEADER-->
@@ -46,7 +55,7 @@
                         In service for your greater good, Geoffrey shows you how to do it, coaches to it, and then holds you accountable.
                         <br><b>Virtues:</b> Attentive, Humble, First On-Last Off
                     </p>
-                    <img src="images/Team Kuhns B.jpg" class="cardPic" id="pic-lead" alt="Drive a Senior Northwest">
+                    <img src="images/Team Kuhns B.jpg" class="cardPic" id="pic-lead" alt="Team Sign">
                 </div>
                 <div class="card" id="about-change">
                     <h3 class="cardTitle normText">Change Management</h3>
@@ -54,7 +63,7 @@
                         Learn to do it right before you do it fast. Geoffrey leverages Lean Six Sigma methodology with his vast training acumen to do it right the first, last, and every time.
                         <br><b>Survived Him:</b> Go Kart User Flow, Staff Appreciation Day, Contact Center Priorities
                     </p>
-                    <img src="images/WBoard Default.jpg" class="cardPic" id="pic-change" alt="Sample 3">
+                    <img src="images/WBoard Default.jpg" class="cardPic" id="pic-change" alt="Metrics Board Design">
                 </div>
                 <div class="card" id="about-user">
                     <h3 class="cardTitle normText">User Centric</h3>
@@ -62,7 +71,7 @@
                         Customers: first. Those who work with customers: first-er. Geoffrey knows how to transform baseline, qualitative interactions to drive KPIs.
                         <br><b>Industry Breadth:</b> Insurance, Food & Beverage, Retail, Contact Center, Board Director
                     </p>
-                    <img src="images/WOW Boards.JPG" class="cardPic" id="pic-user" alt="Sample 2">
+                    <img src="images/WOW Boards.JPG" class="cardPic" id="pic-user" alt="Staff Recognition Board">
                 </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
@@ -70,16 +79,16 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images/Steiner August Smaller.jpg" id="heroPic" alt="Main Display Picture">
+                    <img src="images/Steiner August Smaller.jpg" id="heroPic" alt="Geoffrey Smiling">
                 </a>
                 <h4 class="normText" id="heroText">
                     Roll over a project to investigate here.
                 </h4>
                 <div id="heroStatLeft">
                     <img id="iconLeft" src="images/Pie Chart.svg" class="statIcon" alt="Pie Chart">
-                    <br><br><br><br><h2 class="normText" id="statNumLeft">42%</h2>
+                    <h2 class="normText" id="statNumLeft">15+</h2>
                     <p class="normText" id="statTextLeft">
-                        Insightful Deduction
+                    Years of Customer Service
                     </p>
                 </div>
                 <div id="heroStatGap">
@@ -87,9 +96,9 @@
                 </div>
                 <div id="heroStatRight">
                     <img id="iconRight" src="images/Crosshair.svg" class="statIcon" alt="Cross Hair">
-                    <br><br><br><br><h2 class="normText" id="statNumRight">42%</h2>
+                    <h2 class="normText" id="statNumRight">70+</h2>
                     <p class="normText" id="statTextRight">
-                        Insightful Deduction
+                        Words Per Minute
                     </p>
                 </div>
             </div>
