--- a/legacy.html
+++ b/legacy.html
@@ -5,6 +5,15 @@
         <title>Geo Bio</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/x-icon" href="images/placeholder-logo.jpg" alt="Geo's Portrait">
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NHR175F5G0"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-NHR175F5G0');
+        </script>
     </head>
     <body id="bodyDisplay">
         <!--HEADER-->
@@ -77,9 +86,9 @@
                 </h4>
                 <div id="heroStatLeft">
                     <img id="iconLeft" src="images/Pie Chart.svg" class="statIcon" alt="Pie Chart">
-                    <br><br><br><br><h2 class="normText" id="statNumLeft">42%</h2>
+                    <h2 class="normText" id="statNumLeft">99.4%</h2>
                     <p class="normText" id="statTextLeft">
-                        Insightful Deduction
+                        Player Approval
                     </p>
                 </div>
                 <div id="heroStatGap">
@@ -87,9 +96,9 @@
                 </div>
                 <div id="heroStatRight">
                     <img id="iconRight" src="images/Crosshair.svg" class="statIcon" alt="Cross Hair">
-                    <br><br><br><br><h2 class="normText" id="statNumRight">42%</h2>
+                    <h2 class="normText" id="statNumRight">40+</h2>
                     <p class="normText" id="statTextRight">
-                        Insightful Deduction
+                        Iterations
                     </p>
                 </div>
             </div>
