--- a/work.html
+++ b/work.html
@@ -55,24 +55,32 @@
                         Preserve the neighborly feel of a local nonprofit in need of a facelift.
                         <br><b>Roles:</b> Client Services, Interaction Designer
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-DASNW" alt="Drive a Senior Northwest">
+                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-DASNW" alt="Drive a Senior Northwest Site Re-Design">
+                </div>
+                <div class="card" id="work-FridgeFA">
+                    <h3 class="cardTitle normText">Fridge Kiosk</h3>
+                    <p class="cardDetails normText">
+                        Solve world hunger? Let's start with a smart community fridge and its kiosk UI prototype.
+                        <br><b>Roles:</b> Prototyping, Front End Web Dev
+                    </p>
+                    <img src="images/FFA Screens.jpg" class="cardPic" id="pic-FridgeFA" alt="Fridge For All Community Fridge">
                 </div>
                 <div class="card" id="work-SPlant">
                     <h3 class="cardTitle normText">Project Management</h3>
                     <p class="cardDetails normText">
-                        Bring the best out of 2 other designers in creating an app for would-be plant-lovers.
+                        Bring the best out of 2 other designers in creating an app for would-be plant-lovers. I also programmed the prototype, linked to the right.
                         <br><b>Roles:</b> Project Manager, Interaction Designer
                     </p>
-                    <img src="images/SoulPlant Hype.jpg" class="cardPic" id="pic-SPlant" alt="Sample 3">
+                    <img src="images/SoulPlant Hype.jpg" class="cardPic" id="pic-SPlant" alt="Soul Plant Wellness App">
                 </div>
-                <div class="card" id="work-HGem">
+                <!--<div class="card" id="work-HGem">
                     <h3 class="cardTitle normText">Travel App UX</h3>
                     <p class="cardDetails normText">
                         Uncover and solve a hidden need of modern travelers.
                         <br><b>Roles:</b> Researcher, UI Designer
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-HGem" alt="Sample 2">
-                </div>
+                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-HGem" alt="Hidden Gem Travel App">
+                </div> out until formatting improved and more material on other pages-->
             </div>
             <div id="nullCenter" class="bodyColumn">
                 <!--center "gutter"-->
@@ -86,9 +94,9 @@
                 </h4>
                 <div id="heroStatLeft">
                     <img id="iconLeft" src="images/Pie Chart.svg" class="statIcon" alt="Pie Chart">
-                    <h2 class="normText" id="statNumLeft">42%</h2>
+                    <h2 class="normText" id="statNumLeft">3</h2>
                     <p class="normText" id="statTextLeft">
-                        Insightful Deduction
+                        Cups of Coffee per Day
                     </p>
                 </div>
                 <div id="heroStatGap">
@@ -96,9 +104,9 @@
                 </div>
                 <div id="heroStatRight">
                     <img id="iconRight" src="images/Crosshair.svg" class="statIcon" alt="Cross Hair">
-                    <h2 class="normText" id="statNumRight">42%</h2>
+                    <h2 class="normText" id="statNumRight">210%</h2>
                     <p class="normText" id="statTextRight">
-                        Insightful Deduction
+                        Above and Beyond
                     </p>
                 </div>
             </div>
