Soul Plant Demo & Hero Texts
fast link to Soul Plant Demo.
included Soul Plant Presentation.
put info in Hero Text, especially if it didn't link to more material.
updated some images: User Centric Hero, Charleston, SC, etc.--in line with adding Discovery and Explo-Fun to the site with uncovered info.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h3 class="cardTitle normText">Change Management</h3>
                     <p class="cardDetails normText">
                         Learn to do it right before you do it fast. Geoffrey leverages Lean Six Sigma methodology with his vast training acumen to do it right the first, last, and every time.
-                        <br><b>Survived Him:</b> Go Kart User Flow, Staff Appreciation Day, Contact Center Priorities
+                        <br><b>Survived Him:</b> Go Kart User Flow, Staff Appreciation Day, Team Identities
                     </p>
                     <img src="images/WBoard Default.jpg" class="cardPic" id="pic-change" alt="Metrics Board Design">
                 </div>
@@ -69,7 +69,7 @@
                     <h3 class="cardTitle normText">User Centric</h3>
                     <p class="cardDetails normText">
                         Customers: first. Those who work with customers: first-er. Geoffrey knows how to transform baseline, qualitative interactions to drive KPIs.
-                        <br><b>Industry Breadth:</b> Insurance, Food & Beverage, Retail, Contact Center, Board Director
+                        <br><b>Industry Breadth:</b> QA, Insurance, Food & Beverage, Retail, Contact Center, Volunteer Organizer
                     </p>
                     <img src="images/WOW Boards.JPG" class="cardPic" id="pic-user" alt="Staff Recognition Board">
                 </div>
