--- a/personal.html
+++ b/personal.html
@@ -68,8 +68,8 @@
                 <div class="card" id="pers-hobbies">
                     <h3 class="cardTitle normText">Austin Convert</h3>
                     <p class="cardDetails normText">
-                        Paddleboarding, coffee, local breweries, hiking, fitness, karate, movies--there's never enough time.
-                        <br><b>Hot Spots:</b> Emerald Tavern, Pinballz Lake Creek, nearest trails
+                        Paddleboarding, coffee, local breweries, fitness, karate, movies--there's never enough time.
+                        <br><b>Hot Spots:</b> Emerald Tavern, Pinballz Lake Creek, Lake Travis
                     </p>
                     <img src="images/Austin Oasis.JPG" class="cardPic" id="pic-hobbies" alt="Sample 2">
                 </div>
