--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
                 <div class="card" id="about-lead">
                     <h3 class="cardTitle normText">Leadership</h3>
                     <p class="cardDetails normText">
-                        In service for your greater good, Geoffrey shows you how to do it, coaches to it, and then holds you accountable.
-                        <br><b>Virtues:</b> Attentive, Humble, First On-Last Off
+                        Measuring KPIs, coaching behaviors, sustaining processes--of course. But, do you hold the door open for your folks and brew them coffee? Set your people up for success!
+                        <br><b>Virtues:</b> Chivalry, Attentive, Humble, First On-Last Off
                     </p>
                     <img src="images/Team Kuhns B.jpg" class="cardPic" id="pic-lead" alt="Team Sign">
                 </div>
                 <div class="card" id="about-change">
-                    <h3 class="cardTitle normText">Change Management</h3>
+                    <h3 class="cardTitle normText">Design Optimizer</h3>
                     <p class="cardDetails normText">
-                        Learn to do it right before you do it fast. Geoffrey leverages Lean Six Sigma methodology with his vast training acumen to do it right the first, last, and every time.
-                        <br><b>Survived Him:</b> Go Kart User Flow, Staff Appreciation Day, Team Identities
+                        Learn to do it right before you do it fast. Geoffrey channels his vast training acumen through Lean Six Sigma to do it right the first, last, and every time.
+                        <br><b>Survived Him:</b> Go Kart User Flow, Staff Appreciation Day
                     </p>
                     <img src="images/WBoard Default.jpg" class="cardPic" id="pic-change" alt="Metrics Board Design">
                 </div>
                 <div class="card" id="about-user">
                     <h3 class="cardTitle normText">User Centric</h3>
                     <p class="cardDetails normText">
-                        Customers: first. Those who work with customers: first-er. Geoffrey knows how to transform baseline, qualitative interactions to drive KPIs.
+                        Customers: first. Those who work with customers: first-er. Geoffrey inspires buy-in to drive KPIs.
                         <br><b>Industry Breadth:</b> QA, Insurance, Food & Beverage, Retail, Contact Center, Volunteer Organizer
                     </p>
                     <img src="images/WOW Boards.JPG" class="cardPic" id="pic-user" alt="Staff Recognition Board">
@@ -82,7 +82,7 @@
                     <img src="images/Steiner August Smaller.jpg" id="heroPic" alt="Geoffrey Smiling">
                 </a>
                 <h4 class="normText" id="heroText">
-                    Roll over a project to investigate here.
+                    Welcome! Roll over a project to investigate here.
                 </h4>
                 <div id="heroStatLeft">
                     <img id="iconLeft" src="images/Pie Chart.svg" class="statIcon" alt="Pie Chart">
