--- a/personal.html
+++ b/personal.html
@@ -82,7 +82,7 @@
                     <img src="images/Vision Board.jpg" id="heroPic" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
-                    Roll over a project to investigate here.
+                    Vision Board
                 </h4>
                 <div id="heroStatLeft">
                     <img id="iconLeft" src="images/Pie Chart.svg" class="statIcon" alt="Pie Chart">
