--- a/work.html
+++ b/work.html
@@ -90,7 +90,7 @@
                     <img src="images//Efficiency Diagram.JPG" id="heroPic" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
-                    Roll over a project to investigate here.
+                    Coding: Built this site from scratch.
                 </h4>
                 <div id="heroStatLeft">
                     <img id="iconLeft" src="images/Pie Chart.svg" class="statIcon" alt="Pie Chart">
