Fixed Card Spacing!
BodyColumn Display = Block, now.
also new pic for About: Design Optimizer

--- a/legacy.html
+++ b/legacy.html
@@ -65,14 +65,14 @@
                     </p>
                     <img src="images/Legacy-CharSheetHero.jpg" class="cardPic" id="pic-charSheet" alt="Drive a Senior Northwest">
                 </div>
-                <div class="card" id="legacy-con">
+                <!--<div class="card" id="legacy-con">
                     <h3 class="cardTitle normText">Showmanship</h3>
                     <p class="cardDetails normText">
                         From first impressions to last--how <i>Legacy</i> was a consistent convention success.
                         <br><b>Notable:</b> Comicpalooza, IKKiCON, ChupacabraCon
                     </p>
                     <img src="images/Dice Setup.JPG" class="cardPic" id="pic-con" alt="Sample 2">
-                </div>
+                </div>-->
             </div>
             <div id="nullCenter" class="bodyColumn">
                 <!--center "gutter"-->
