--- a/work.html
+++ b/work.html
@@ -73,14 +73,14 @@
                     </p>
                     <img src="images/SoulPlant Hype.jpg" class="cardPic" id="pic-SPlant" alt="Soul Plant Wellness App">
                 </div>
-                <!--<div class="card" id="work-HGem">
+                <div class="card" id="work-HGem">
                     <h3 class="cardTitle normText">Travel App UX</h3>
                     <p class="cardDetails normText">
-                        Uncover and solve a hidden need of modern travelers.
+                        Uncover and solve a hidden need of modern travelers. This walkthrough takes us from beginning to end of a design process.
                         <br><b>Roles:</b> Researcher, UI Designer
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-HGem" alt="Hidden Gem Travel App">
-                </div> out until formatting improved and more material on other pages-->
+                    <img src="images/Susans Journey.jpg" class="cardPic" id="pic-HGem" alt="Hidden Gem Travel App">
+                </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
                 <!--center "gutter"-->
