Fixing Variable HeroPic Margins
RWD margins
HeroPic margins
HTML, CSS, and Java edits

--- a/legacy.html
+++ b/legacy.html
@@ -79,7 +79,7 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images/Legacy-siteSplash.jpg" id="heroPic" alt="Main Display Picture">
+                    <img src="images/Legacy-siteSplash.jpg" id="heroPic" style="margin-left: 9vw" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
                     Epic Speeches & Improvisation
