--- a/work.html
+++ b/work.html
@@ -87,7 +87,7 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images//Efficiency Diagram.JPG" id="heroPic" alt="Main Display Picture">
+                    <img src="images//Efficiency Diagram.JPG" id="heroPic" style="margin-left: 9vw" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
                     Coding: Built this site from scratch.
