--- a/personal.html
+++ b/personal.html
@@ -79,7 +79,7 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images/Vision Board.jpg" id="heroPic" alt="Main Display Picture">
+                    <img src="images/Vision Board.jpg" id="heroPic" style="margin-left: 9vw" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
                     Vision Board
