Nav & Picture Cropping
adjusted RWD for nav buttons
 - margin-left
 - nullCenterTop
 - mediaQuery differences
pictures crop instead of resize

--- a/personal.html
+++ b/personal.html
@@ -63,7 +63,7 @@
                         Though personally Catholic, Geoffrey enjoys learning and philosophizing with others willing to go there.
                         <br><b>Learned From:</b> Islam, Judaism, Paganism, Shamanism, Agnosticism, Atheism
                     </p>
-                    <img src="images/KnightDraw.jpg" class="cardPic" id="pic-guru" alt="Sample 3">
+                    <img src="images/KnightDraw.jpg" class="cardPic" id="pic-guru" style="object-fit:contain" alt="Sample 3">
                 </div>
                 <div class="card" id="pers-hobbies">
                     <h3 class="cardTitle normText">Austin Convert</h3>
